finally fixed the flex-wrap of gallery-list

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -13,6 +13,7 @@
 	font-size: 1.5em;
 }
 
-p, .App-header {
+p,
+.App-header {
 	max-width: auto;
 }
