--- a/src/components/GalleryList/GalleryList.css
+++ b/src/components/GalleryList/GalleryList.css
@@ -1,5 +1,4 @@
 #gallery-list {
 	display: flex;
 	flex-wrap: wrap;
-	flex-direction: row;
 }
